bugfix/carousel-overflow, profile state, menu

--- a/m_archive/src/pages/Home/Carousel/carousel.module.scss
+++ b/m_archive/src/pages/Home/Carousel/carousel.module.scss
@@ -3,7 +3,8 @@
 .wrapper {
   @include m.flex();
   column-gap: 8px;
-  padding: 28px 0;
+  padding: 28px 0; 
+  overflow: hidden;
   .ulWrapper {
     @include m.flex(flex-start);
     column-gap: 40px; 
